working new shoe, commented out upload

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^3.2.0",
     "sequelize": "^6.30.0",
     "uid": "^2.0.2",
+    "upload-js": "^2.11.2",
     "uploader": "^3.13.0"
   }
 }
